test_regress/t/t_force_unpacked_unsup.out
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:22:8: Unsupported: Forced unpacked array variable with elements of opaque types
   22 |   real r_array[2];
      |        ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
